// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should add new field to view and remove it from the payload before submission 1`] = `
<div>
  <div
    class="-o3ihhy"
  >
    <div
      class="MuiScopedCssBaseline-root -tofwhl-MuiScopedCssBaseline-root"
    >
      <main
        class="MuiBox-root emotion-0"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-1"
        >
          <div
            class="MuiBox-root emotion-2"
          >
            <div
              class="MuiBox-root emotion-3"
            >
              <div
                class="MuiBox-root emotion-4"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 -5c6fpu-MuiTypography-root"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-5"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-6"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiBox-root emotion-9"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 -6zkiit-MuiTypography-root"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiBox-root emotion-9"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.address"
                          id="userProfile.address-label"
                        >
                          <span>
                            Street Address
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.address-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.address"
                            id="userProfile.address"
                            name="userProfile.address"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth -1sx3il5-MuiButtonBase-root-MuiButton-root"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-8"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-19"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-20"
                    >
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <div
                          class="MuiBox-root emotion-9"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-24"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom error message and prevent submission when failure is triggered in preSubmit callback 1`] = `
<div>
  <div
    class="-o3ihhy"
  >
    <div
      class="MuiScopedCssBaseline-root -tofwhl-MuiScopedCssBaseline-root"
    >
      <main
        class="MuiBox-root emotion-0"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-1"
        >
          <div
            class="MuiBox-root emotion-2"
          >
            <div
              class="MuiBox-root emotion-3"
            >
              <div
                class="MuiBox-root emotion-4"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 -5c6fpu-MuiTypography-root"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-5"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-6"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="6"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout -12m9hbj-MuiPaper-root-MuiAlert-root"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon -1d59v4p-MuiAlert-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit -6cbkjc-MuiSvgIcon-root"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message -1fo9dcf-MuiAlert-message"
                      >
                        <div
                          class="-u4dvyj"
                        >
                          <div
                            class="MuiBox-root -0"
                          >
                            This is my custom global message
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 -6zkiit-MuiTypography-root"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.lastName-error"
                            aria-errormessage="userProfile.lastName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-filled -1den0xp-MuiFormHelperText-root"
                          id="userProfile.lastName-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            Custom preSubmit error
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth -1sx3il5-MuiButtonBase-root-MuiButton-root"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-19"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-20"
                    >
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <div
                          class="MuiBox-root emotion-10"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-24"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom field level error message and custom global message on page load 1`] = `
<div>
  <div
    class="-o3ihhy"
  >
    <div
      class="MuiScopedCssBaseline-root -tofwhl-MuiScopedCssBaseline-root"
    >
      <main
        class="MuiBox-root emotion-0"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-1"
        >
          <div
            class="MuiBox-root emotion-2"
          >
            <div
              class="MuiBox-root emotion-3"
            >
              <div
                class="MuiBox-root emotion-4"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 -5c6fpu-MuiTypography-root"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-5"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-6"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="3m"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout -12m9hbj-MuiPaper-root-MuiAlert-root"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon -1d59v4p-MuiAlert-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit -6cbkjc-MuiSvgIcon-root"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message -1fo9dcf-MuiAlert-message"
                      >
                        <div
                          class="-u4dvyj"
                        >
                          <div
                            class="MuiBox-root -0"
                          >
                            This is my custom global message
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 -6zkiit-MuiTypography-root"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.lastName-error"
                            aria-errormessage="userProfile.lastName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.lastName-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            Custom parseSchema error
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth -1sx3il5-MuiButtonBase-root-MuiButton-root"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-19"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-20"
                    >
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <div
                          class="MuiBox-root emotion-10"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-24"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show generic error message and prevent updated view rendering when failure is triggered in postSubmit callback 1`] = `
<div>
  <div
    class="-o3ihhy"
  >
    <div
      class="MuiScopedCssBaseline-root -tofwhl-MuiScopedCssBaseline-root"
    >
      <main
        class="MuiBox-root emotion-0"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-1"
        >
          <div
            class="MuiBox-root emotion-2"
          >
            <div
              class="MuiBox-root emotion-3"
            >
              <div
                class="MuiBox-root emotion-4"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 -5c6fpu-MuiTypography-root"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-5"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-6"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="6"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout -12m9hbj-MuiPaper-root-MuiAlert-root"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon -1d59v4p-MuiAlert-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit -6cbkjc-MuiSvgIcon-root"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message -1fo9dcf-MuiAlert-message"
                      >
                        <div
                          class="-u4dvyj"
                        >
                          <div
                            class="MuiBox-root -0"
                          >
                            We could not process your registration at this time. Please try again later.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 -6zkiit-MuiTypography-root"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth -1sx3il5-MuiButtonBase-root-MuiButton-root"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-19"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-20"
                    >
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <div
                          class="MuiBox-root emotion-10"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-21"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-24"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show validation error messages on all fields when submitted without completing required fields 1`] = `
<div>
  <div
    class="-o3ihhy"
  >
    <div
      class="MuiScopedCssBaseline-root -tofwhl-MuiScopedCssBaseline-root"
    >
      <main
        class="MuiBox-root emotion-0"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-1"
        >
          <div
            class="MuiBox-root emotion-2"
          >
            <div
              class="MuiBox-root emotion-3"
            >
              <div
                class="MuiBox-root emotion-4"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 -5c6fpu-MuiTypography-root"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-5"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-6"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="3r"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout -12m9hbj-MuiPaper-root-MuiAlert-root"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon -1d59v4p-MuiAlert-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit -6cbkjc-MuiSvgIcon-root"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message -1fo9dcf-MuiAlert-message"
                      >
                        <div
                          class="-u4dvyj"
                        >
                          <div
                            class="MuiBox-root -0"
                          >
                            We found some errors. Please review the form and make corrections.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 -6zkiit-MuiTypography-root"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiBox-root emotion-10"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.lastName-error"
                            aria-errormessage="userProfile.lastName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.lastName-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.firstName-error"
                            aria-errormessage="userProfile.firstName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.firstName-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.email-error"
                            aria-errormessage="userProfile.email-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.email-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.login-error"
                            aria-errormessage="userProfile.login-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.login-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth -1txc9or-MuiFormControl-root"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined -mfafpd-MuiFormLabel-root-MuiInputLabel-root"
                          data-shrink="false"
                          for="userProfile.address"
                          id="userProfile.address-label"
                        >
                          <span>
                            Street Address
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl -ekkn7v-MuiInputBase-root"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.address-error"
                            aria-errormessage="userProfile.address-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.address-label"
                            class="MuiInputBase-input -9q1fac-MuiInputBase-input"
                            data-se="userProfile.address"
                            id="userProfile.address"
                            name="userProfile.address"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium -1den0xp-MuiFormHelperText-root"
                          id="userProfile.address-error"
                        >
                          <span
                            class="MuiBox-root -1gab2mw"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root -0"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth -1sx3il5-MuiButtonBase-root-MuiButton-root"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-9"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-20"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-21"
                    >
                      <div
                        class="MuiBox-root emotion-22"
                      >
                        <div
                          class="MuiBox-root emotion-10"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 -179xm2l-MuiTypography-root"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-22"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-25"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
